Fix portfolio styles & layout issues

--- a/_webpack/styles/_tiles.scss
+++ b/_webpack/styles/_tiles.scss
@@ -37,7 +37,6 @@
 .portfolio-tile {
   display: block;
   position: relative;
-  margin-bottom: $grid-gutter-width / 2;
   color: $white;
   overflow: hidden;
 
@@ -54,7 +53,8 @@
 
   &.bg-voome,
   &.bg-move,
-  &.bg-beautyheaven {
+  &.bg-beautyheaven,
+  &.bg-momentum {
     color: #212529;
 
     .hr-wrapper {
@@ -108,7 +108,7 @@
   border-bottom: 2px solid $gray-smoke;
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
